app/globals.css
@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Roboto&family=Source+Sans+Pro:wght@300&display=swap');
@import url('https://fonts.googleapis.com/css?family=Sacramento:400');
@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600;700&family=Ubuntu:wght@300;400&display=swap');


@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground: #3C3C4399;
  --background:#F2F2F7FF;
  --gradient-nav: linear-gradient(to right, rgba(0, 0, 0, 1) 0%, rgba(30, 30, 30, 0.9) 50%, rgba(0, 0, 0, 1) 100%);
  --link: #5AC8FAFF;
  --blur-rgb: 0, 0, 0;

  --size-1: 0.25rem;
  --size-2: 0.5rem;
  --size-3: 0.75rem;
  --size-4: 1rem;
  --size-5: 1.25rem;
  --size-6: 1.5rem;
  --size-8: 2rem;
  --size-12: 3rem;
  --size-16: 4rem;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground: #EBEBF599;
    --background: 	#1C1C1EFF;
    --gradient-nav: linear-gradient(to right, rgba(255, 255, 255, 1) 0%, rgba(245, 245, 245, 0.9) 50%, rgba(255, 255, 255, 1) 100%);
    --link: #64D2FFFF;
    --blur-rgb: 255, 255, 255;
  }
}

* {
  box-sizing: border-box;
}

html {
  font-family: 'Montserrat', sans-serif;
}

body {
  color: var(--foreground);
  background: linear-gradient(
      to bottom,
      transparent,
      var(--background)
    )
    var(--background);
    margin: 0;

    --muted-text-rgb: 176, 176, 176;
    --highlight-gradient: linear-gradient(to right, #E61E4D 0%, #E31C5F 50%, #D70466 100%);
    --violet-rgb: 160, 122, 170;
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}


a {
  text-decoration: none;
} 

.header-background {
  position: absolute;
  width: 100%;
  height: 320px;
  top: 0;
  left: 0;
  z-index: -1;
}

.not-found,
.error {
  margin-top: 5rem;
  text-align: center;
}

.not-found h1,
.error h1 {
  font-size: 5rem;
  margin: 0px;
  font-weight: 900;
  text-transform: uppercase;
  background-size: cover;
  background-position: center;
  font-family: 'Montserrat', sans-serif;
}

.not-found p,
.error p {
  font-size: 1.5rem;
  font-weight: 500;
}

